--- a/Neptune360AutomationCore/Neptune360AutomationCore.csproj
+++ b/Neptune360AutomationCore/Neptune360AutomationCore.csproj
@@ -54,6 +54,9 @@
     <None Update="extent-config.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\TestData.xlsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
